--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "express": "^4.17.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
