--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
